logs/Slang/generated/hdlconv/hdlconvertor_p597.sv.log
name: hdlconvertor_p597
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p597.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p597.sv:3:1: error: use of undeclared identifier '$timeformat'
$timeformat(-9, 5, " ns", 10);
^~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p597.sv:9:1: error: expected member
buf #10000000 (o1,in1);
^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p597.sv:11:8: error: use of undeclared identifier '$fopen'
file = $fopen("a1.dat");
       ^~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p597.sv:12:11: error: use of undeclared identifier '$fmonitor'
#00000000 $fmonitor(file,"%m: %t in1=%d o1=%h", $realtime,in1,o1);
          ^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p597.sv:21:1: error: expected member
buf #10000 (o2,in2);
^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p597.sv:23:7: error: use of undeclared identifier '$fopen'
file2=$fopen("a2.dat");
      ^~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p597.sv:24:8: error: use of undeclared identifier '$fmonitor'
#00000 $fmonitor(file2,"%m: %t in2=%d o2=%h",$realtime,in2,o2);
       ^~~~~~~~~
